fix alignment for pagination buttons

--- a/less/plugins/plugin-blog.less
+++ b/less/plugins/plugin-blog.less
@@ -43,6 +43,11 @@
     margin: 30px 0 40px;
 }
 
+// Older & Newer buttons
+
+.blogpostlist .pagination-item {
+    display: inline-block;
+}
 
 
 
